infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bible-api-service
  namespace: gio
spec:
  type: ClusterIP
  selector:
    app: bible-api
  ports:
  - port: 80
    targetPort: 80
