infra/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: gio
spec:
  type: ClusterIP
  selector:
    app: hr-frontend
  ports:
  - port: 80
    targetPort: 80
