infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bible-api-ingress
  namespace: gio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: cv-assistant.az.diogohack.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bible-api-service
            port:
              number: 80
